[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Kenney Blocks.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://art/Match 3 Assets 3/Match 3 Assets/UI/Level Select/Red Button.png" type="Texture" id=2]
[ext_resource path="res://art/Match 3 Assets 3/Match 3 Assets/UI/Level Select/Star Blank.png" type="Texture" id=3]
[ext_resource path="res://scripts/LevelButton.gd" type="Script" id=4]
[ext_resource path="res://art/Match 3 Assets 3/Match 3 Assets/UI/Level Select/Green Button 2.png" type="Texture" id=5]
[ext_resource path="res://art/Match 3 Assets 3/Match 3 Assets/UI/Level Select/Star Filled.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[node name="LevelButton" type="Node2D"]
script = ExtResource( 4 )
blocked_texture = ExtResource( 2 )
open_texture = ExtResource( 5 )
goal_met = ExtResource( 6 )
goal_not_met = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -48.116
margin_top = -49.0
margin_right = 49.0
margin_bottom = 48.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureButton"]
margin_left = 19.521
margin_top = 9.79937
margin_right = 81.521
margin_bottom = 69.7994
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="star1" type="Sprite" parent="."]
position = Vector2( -48.8539, 59.6765 )
texture = ExtResource( 3 )

[node name="star2" type="Sprite" parent="."]
position = Vector2( 0, 78.6019 )
texture = ExtResource( 3 )

[node name="star3" type="Sprite" parent="."]
position = Vector2( 47.9737, 58.7962 )
texture = ExtResource( 3 )
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
